# live_compositor

./: Cargo.toml
compositor_render/: Cargo.toml
compositor_render/src/: state.rs  wgpu.rs
compositor_render/src/state/: render_graph.rs  renderers.rs
compositor_render/src/transformations/: image_renderer.rs  layout.rs
compositor_render/src/transformations/layout/: apply_layouts.wgsl  apply_layouts_lanczos.wgsl  layout_renderer.rs  params.rs  shader.rs  shader_toy_rewrite.wgsl
compositor_render/src/wgpu/: common_pipeline.rs  ctx.rs
compositor_web/: Cargo.toml
compositor_web/src/: lib.rs
compositor_web/web_test/: index.html
docs/: sidebars.ts
docs/pages/deployment/: aws-ec2.md
docs/src/components/: PlaygroundRenderSettings.module.css  PlaygroundRenderSettings.tsx  SettingsInputs.module.css  SettingsInputs.tsx
docs/src/pages/: playground.tsx
integration_tests/examples/: raw_channel_output.rs
