[package]
name = "compositor_render"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
web_renderer = ["dep:compositor_chromium"]

[dependencies]
pollster = "0.3.0"
thiserror = { workspace = true }
wgpu = { workspace = true }
compositor_chromium = { workspace = true, optional = true }
image = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }
bytemuck = { version = "1.13.1", features = ["derive"] }
glyphon = "0.5.0"
crossbeam-channel = { workspace = true }
resvg = "0.35.0"
nalgebra-glm = { version = "0.18.0", features = ["convert-bytemuck"] }
naga = { version = "0.19.0", features = ["wgsl-in"] }
rand = { workspace = true }
tracing = { workspace = true }
wasm-bindgen-futures = "0.4.42"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
shared_memory = { version = "0.12.4", optional = true }
