[package]
name = "compositor_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
compositor_render = { path = "../compositor_render" }
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
tracing = { workspace = true }
tracing-subscriber = "0.2.19"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    "Document",
    "Window",
    "Element",
    "CanvasRenderingContext2d",
] }
wgpu = { workspace = true }
winit = "0.30.4"
wasm-log = "0.3.1"
log.workspace = true
crossbeam-channel = { workspace = true }
js-sys = "0.3.69"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
